--- a/index.html
+++ b/index.html
@@ -4,38 +4,60 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Portfolio of Domonkos Kertész</title>
+    <link href="css/bootstrap-grid.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&family=Inknut+Antiqua:wght@500&display=swap"
+          rel="stylesheet">
 </head>
+
+<!--TODO: fix scroll effect-->
+<!--TODO: fill data-->
+<!--TODO: fix intro pic-->
+<!--TODO: fix copyright-->
+<!--TODO: add transition to nav underline-->
+<!--TODO: fix background picture to widescreen-->
+<!--TODO: cleanup files-->
 
 <body>
 <nav>
     <ul>
-        <li>contact</li>
-        <li>works</li>
-        <li>experience</li>
+        <li><a href="#contact">contact</a></li>
+        <li><a href="#projects">works</a></li>
+        <li><a href="#experience">experience</a></li>
+        <li class="empty"></li>
         <li>behance</li>
-        <li>linkedin</li>
+        <li><a href="https://www.linkedin.com/in/domonkos-kertesz-508a9719a/" target="_blank">linkedin</a></li>
     </ul>
 </nav>
 
 <header>
-    <h1>hi, i'm<br/>Domonkos</h1>
-    <ul>
-        <li>_Graphic & UX designer</li>
-        <li>_Graduated from Artistic University in Amsterdam</li>
-        <li>_8+ years of experience</li>
-        <li>_Collaborating with many successful startups and companies</li>
-        <li>_Speaking at various conferences for designers</li>
-    </ul>
-    <a href="">Add me on linked in</a>
-    <figure>
-        <img alt="Domonkos Kertesz" src="img/profile.png">
-        <figcaption>Domonkos Kertesz</figcaption>
-    </figure>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <h1>hi, i'm<br/>Domonkos</h1>
+                <ul>
+                    <li>_These are my experiences</li>
+                    <li>_Huge experiences</li>
+                    <li>_Much wow</li>
+                    <li>_Very experience</li>
+                    <li>_HMmmmmmmmmmmmmmmmmm</li>
+                </ul>
+                <a class="button" href="">add me on linkedin</a>
+            </div>
+            <div class="col-sm">
+                <figure class="padded">
+                    <img alt="Domonkos Kertesz" class="into-img" src="img/profile.png">
+                    <figcaption>Domonkos Kertesz</figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
 </header>
 
-<section>
-    <ul>
+<section id="experience">
+    <ul class="skills-list">
         <li>01_graphic design</li>
         <li>02_user experience</li>
         <li>03_user interface design</li>
@@ -44,8 +66,97 @@
     </ul>
 </section>
 
-<section>
-    <h2></h2>
+<section class="project-section blue-section" id="projects">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <figure>
+                    <img alt="Cosmetics" src="img/cosmetics.jpg">
+                    <figcaption class="right-alignment">
+                        Image caption
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-sm">
+                <h2>branding strategy<br/>
+                    for female cosmetics</h2>
+                <p>
+                    Lorem ipsum dolor amet sartorial quinoa 3 wolf moon, tilde neutra succulents vegan kitsch church-key
+                    vaporware.
+                    Pork belly thundercats iPhone tilde 90’s ugh. Narwhal post-ironic VHS affogato subway tile. Everyday
+                    carry
+                    copper mug art party, blue bottle normcore banh mi gastropub lomo fingerstache four dollar toast
+                    single-origin
+                    coffee hell of 3 wolf moon palo santo kinfolk.
+                </p>
+                <a class="button" href="">read more</a>
+            </div>
+        </div>
+    </div>
 </section>
+
+<section class="project-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm right-alignment">
+                <h2>user experience design<br/>
+                    for dashboard app</h2>
+                <p>
+                    Lorem ipsum dolor amet sartorial quinoa 3 wolf moon, tilde neutra succulents vegan kitsch church-key
+                    vaporware.
+                    Pork belly thundercats iPhone tilde 90’s ugh. Narwhal post-ironic VHS affogato subway tile. Everyday
+                    carry
+                    copper mug art party, blue bottle normcore banh mi gastropub lomo fingerstache four dollar toast
+                    single-origin
+                    coffee hell of 3 wolf moon palo santo kinfolk.
+                </p>
+                <a class="button" href="">read more</a>
+            </div>
+            <div class="col-sm">
+                <figure>
+                    <img alt="Dashboard" src="img/dashboard-app.jpg">
+                    <figcaption>
+                        Image caption
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="project-section blue-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <figure>
+                    <img alt="IPad app" src="img/ipad-app.jpg">
+                    <figcaption class="right-alignment">
+                        Image caption
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-sm">
+                <h2>iPad app<br/>
+                    for the artists</h2>
+                <p>
+                    Lorem ipsum dolor amet sartorial quinoa 3 wolf moon, tilde neutra succulents vegan kitsch church-key
+                    vaporware.
+                    Pork belly thundercats iPhone tilde 90’s ugh. Narwhal post-ironic VHS affogato subway tile. Everyday
+                    carry
+                    copper mug art party, blue bottle normcore banh mi gastropub lomo fingerstache four dollar toast
+                    single-origin
+                    coffee hell of 3 wolf moon palo santo kinfolk.
+                </p>
+                <a class="button" href="">read more</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer id="contact">
+    <h2>any questions?<br>
+        find me here d.kertesz16@gmail.com</h2>
+    <p>designed & developed by Domonkos Kertesz 2022</p>
+</footer>
 </body>
 </html>
