--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
           rel="stylesheet">
 </head>
 
-<!--TODO: fix scroll effect-->
 <!--TODO: fill data-->
-<!--TODO: fix intro pic-->
-<!--TODO: fix copyright-->
+<!--TODO: rework footer-->
 <!--TODO: add transition to nav underline-->
-<!--TODO: fix background picture to widescreen-->
-<!--TODO: cleanup files-->
 
 <body>
 <nav>
@@ -33,6 +29,10 @@
 </nav>
 
 <header>
+    <div class="padded-two"></div>
+</header>
+
+<section class="header-section">
     <div class="container">
         <div class="row">
             <div class="col-sm">
@@ -44,7 +44,8 @@
                     <li>_Very experience</li>
                     <li>_HMmmmmmmmmmmmmmmmmm</li>
                 </ul>
-                <a class="button" href="">add me on linkedin</a>
+                <a class="button" href="https://www.linkedin.com/in/domonkos-kertesz-508a9719a/" target="_blank">add me
+                    on linkedin</a>
             </div>
             <div class="col-sm">
                 <figure class="padded">
@@ -54,9 +55,11 @@
             </div>
         </div>
     </div>
-</header>
+</section>
 
-<section id="experience">
+<div class="divider" id="experience"></div>
+
+<section>
     <ul class="skills-list">
         <li>01_graphic design</li>
         <li>02_user experience</li>
@@ -66,7 +69,11 @@
     </ul>
 </section>
 
-<section class="project-section blue-section" id="projects">
+<div class="divider-two"></div>
+<div class="project-anchor" id="projects"></div>
+<div class="blue-divider"></div>
+
+<section class="project-section blue-section top-section">
     <div class="container">
         <div class="row">
             <div class="col-sm">
@@ -155,7 +162,7 @@
 
 <footer id="contact">
     <h2>any questions?<br>
-        find me here d.kertesz16@gmail.com</h2>
+        find me here <a class="email-link" href="mailto:d.kertesz16@gmail.com">d.kertesz16@gmail.com</a></h2>
     <p>designed & developed by Domonkos Kertesz 2022</p>
 </footer>
 </body>
