Failed lighthouse audits fixed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="Portfolio of Kertész Domonkos Software Engineer,
+    Intern at Continental Vehicle Dynamics,
+    Student at the University of Pannonia,
+    and Hobby Artist" name="description">
     <title>Portfolio of Domonkos Kertész</title>
     <link href="css/bootstrap-grid.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
@@ -15,6 +19,7 @@
 <!--TODO: fill data-->
 <!--TODO: rework footer-->
 <!--TODO: add transition to nav underline-->
+<!--TODO: fix failed lighthouse audits-->
 
 <body>
 <nav>
@@ -51,7 +56,7 @@
             </div>
             <div class="col-sm">
                 <figure class="padded">
-                    <img alt="Domonkos Kertesz" class="intro-img" src="img/profile.png">
+                    <img alt="Domonkos Kertesz" class="intro-img" src="img/profile.webp">
                     <figcaption>Domonkos Kertesz</figcaption>
                 </figure>
             </div>
@@ -98,7 +103,7 @@
                     single-origin
                     coffee hell of 3 wolf moon palo santo kinfolk.
                 </p>
-                <a class="button" href="">read more</a>
+                <a class="button" href="https://google.com" rel="noopener" target="_blank">read more</a>
             </div>
         </div>
     </div>
@@ -119,7 +124,7 @@
                     single-origin
                     coffee hell of 3 wolf moon palo santo kinfolk.
                 </p>
-                <a class="button" href="">read more</a>
+                <a class="button" href="https://google.com" rel="noopener" target="_blank">read more</a>
             </div>
             <div class="col-sm">
                 <figure>
@@ -156,7 +161,7 @@
                     single-origin
                     coffee hell of 3 wolf moon palo santo kinfolk.
                 </p>
-                <a class="button" href="">read more</a>
+                <a class="button" href="https://google.com" rel="noopener" target="_blank">read more</a>
             </div>
         </div>
     </div>
