--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Portfolio of Kertész Domonkos Software Engineer,
-    Intern at Continental Vehicle Dynamics,
+    Engineer at Continental Vehicle Dynamics,
     Student at the University of Pannonia,
     and Hobby Artist" name="description">
-    <title>Portfolio of Domonkos Kertész</title>
+    <title></title>
     <link href="css/bootstrap-grid.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&family=Inknut+Antiqua:wght@500&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&family=Inknut+Antiqua:wght@500&display=swap" rel="stylesheet">
+    <script src="script/DataFiller.js"></script>
 </head>
 
 <!--TODO: fill data-->
@@ -28,9 +28,8 @@
         <li><a href="#projects">works</a></li>
         <li><a href="#experience">experience</a></li>
         <li class="empty"></li>
-        <li>behance</li>
-        <li><a href="https://www.linkedin.com/in/domonkos-kertesz-508a9719a/" rel="noopener"
-               target="_blank">linkedin</a></li>
+        <li><a href="https://github.com/KihiraLove" rel="noopener" target="_blank">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/domonkos-kertesz-508a9719a/" rel="noopener" target="_blank">linkedin</a></li>
     </ul>
 </nav>
 
@@ -57,7 +56,6 @@
             <div class="col-sm">
                 <figure class="padded">
                     <img alt="Domonkos Kertesz" class="intro-img" src="img/profile.webp">
-                    <figcaption>Domonkos Kertesz</figcaption>
                 </figure>
             </div>
         </div>
