--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Meta-->
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Portfolio of Kertész Domonkos Software Engineer,
     Engineer at Continental Vehicle Dynamics,
     Student at the University of Pannonia,
     and Hobby Artist" name="description">
-    <title></title>
+
+    <!--Google fonts-->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&family=Inknut+Antiqua:wght@500&display=swap" rel="stylesheet">
+
+    <!--Connected files-->
+    <link rel="icon" type="image/png" href="img/favicon.png" />
     <link href="css/bootstrap-grid.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&family=Inknut+Antiqua:wght@500&display=swap" rel="stylesheet">
     <script src="script/DataFiller.js"></script>
 </head>
 
@@ -28,14 +33,10 @@
         <li><a href="#projects">works</a></li>
         <li><a href="#experience">experience</a></li>
         <li class="empty"></li>
-        <li><a href="https://github.com/KihiraLove" rel="noopener" target="_blank">Github</a></li>
+        <li><a href="https://github.com/KihiraLove" rel="noopener" target="_blank">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/domonkos-kertesz-508a9719a/" rel="noopener" target="_blank">linkedin</a></li>
     </ul>
 </nav>
-
-<header>
-    <div class="padded-two"></div>
-</header>
 
 <section class="header-section">
     <div class="container">
@@ -49,9 +50,7 @@
                     <li>_Very experience</li>
                     <li>_HMmmmmmmmmmmmmmmmmm</li>
                 </ul>
-                <a class="button" href="https://www.linkedin.com/in/domonkos-kertesz-508a9719a/" rel="noopener"
-                   target="_blank">add me
-                    on linkedin</a>
+                <a class="button" href="https://www.linkedin.com/in/domonkos-kertesz-508a9719a/" rel="noopener" target="_blank">add me on linkedin</a>
             </div>
             <div class="col-sm">
                 <figure class="padded">
@@ -63,16 +62,6 @@
 </section>
 
 <div class="divider" id="experience"></div>
-
-<section>
-    <ul class="skills-list">
-        <li>01_graphic design</li>
-        <li>02_user experience</li>
-        <li>03_user interface design</li>
-        <li>04_design thinking</li>
-        <li>05_user research</li>
-    </ul>
-</section>
 
 <div class="divider-two"></div>
 <div class="project-anchor" id="projects"></div>
